--- a/views/404.ejs
+++ b/views/404.ejs
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>404</title>
+    <title>Blog | <%= title %></title>
 </head>
 <body>
-    <h1>Error 404</h1>
-    <p>The page does not exist</p>
+    <h1>Hello 404 page</h1>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Et, provident?</p>
 </body>
 </html>
